firewall/ip6tables.rules
# Generated by ip6tables-save v1.4.21 on Sun Oct 16 14:02:45 2016
*filter
:INPUT DROP [0:0]
:FORWARD ACCEPT [6:624]
:OUTPUT ACCEPT [75:7216]
-A INPUT -s fdbd:6b69:4dc6::/48 -j ACCEPT
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -p ipv6-icmp -j ACCEPT
-A INPUT -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT
COMMIT
# Completed on Sun Oct 16 14:02:45 2016
# Generated by ip6tables-save v1.4.21 on Sun Oct 16 14:02:45 2016
*nat
:PREROUTING ACCEPT [1:104]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
-A POSTROUTING -s fdbd:6b69:4dc6::/48 -j MASQUERADE
COMMIT
# Completed on Sun Oct 16 14:02:45 2016
