firewall/iptables.rules
# Generated by iptables-save v1.4.21 on Sun Oct 16 13:13:10 2016
*nat
:PREROUTING ACCEPT [3206:215651]
:INPUT ACCEPT [437:27233]
:OUTPUT ACCEPT [25:1615]
:POSTROUTING ACCEPT [25:1615]
:DOCKER - [0:0]
-A PREROUTING -m addrtype --dst-type LOCAL -j DOCKER
-A OUTPUT ! -d 127.0.0.0/8 -m addrtype --dst-type LOCAL -j DOCKER
-A POSTROUTING -s 172.17.0.0/16 ! -o docker0 -j MASQUERADE
-A DOCKER -i docker0 -j RETURN
COMMIT
# Completed on Sun Oct 16 13:13:10 2016
# Generated by iptables-save v1.4.21 on Sun Oct 16 13:13:10 2016
*filter
:INPUT DROP [470:31929]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [5274:24802994]
:DOCKER - [0:0]
:DOCKER-ISOLATION - [0:0]
-A INPUT -s 172.17.0.0/16 -j ACCEPT
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT
COMMIT
# Completed on Sun Oct 16 13:13:10 2016
